# django-realtime-broadcast

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
broadcast/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
feed/: consumers.py  forms.py  models.py  routing.py  signals.py  tasks.py  urls.py  views.py
feed/migrations/: 0001_initial.py
feed/templates/: index.html
redis/: redis.conf
